# py-money

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: github_ci.yaml
money/: currency.py  exceptions.py  money.py
tests/: test_money.py
