[tool.poetry]
name = "py-money"
version = "2021.02.02"
description = "Money class for Python, forked from vimeo/py-money"
authors = ["J.C. Manzo <jnmanzo@gmail.com>", "Dave Sutherland <dave@alphalayer.ai>"]
license = "MIT"
packages = [
    { include = "money" }
]

[tool.poetry.dependencies]
python = "^3.7"
Babel = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
